2006-09-26  Akim Demaille  <akim.demaille@free.fr>

	namespace cleanups.
	* ucommand.cc: Don't "using" things from std::.
	Catch up with liburbi being in urbi::.
	* ucommand.h: Ditto.
	* uexpression.h: Ditto.
	* ufloat.h: Ditto.
	* ucallid.cc: Ditto.
	* ugroup.h: Ditto.
	* uexpression.cc: Ditto.
	* uvariable.cc: Ditto.
	* uconnection.h: Ditto.
	* ubinder.h: Ditto.
	* userver.cc: Ditto.
	* userver.h: Ditto.
	* uobj.cc: Ditto.
	* uobj.h: Ditto.
	* uobject/uvar.cc: Ditto.
	* uvariablename.cc: Ditto.
	* uvariable.h: Ditto.
	* uvariablename.h: Ditto.
	* ucallid.h: Ditto.
	* uconnection.cc: Ditto.
	* ubinder.cc: Ditto.

2006-09-25  Akim Demaille  <akim@lrde.epita.fr>

	Use URBI_DIRS.
	* build-aux/urbi-dirs.m4: New.
	* configure.ac: Use it.

2006-09-25  Akim Demaille  <akim@lrde.epita.fr>

	distcheck fixes.
	* build-aux/doxygen.mk: Update.
	* build-aux/revision.mk: Clean version..hh.

2006-09-25  Akim Demaille  <akim@lrde.epita.fr>

	Portability fixes.
	* parser/bison/Makefile.defs: use Perl, not sed, since alternation
	is not portable (and OSX is a loser in this regard).
	Also cover cin, cout, cerr, and widen the pattern.

2006-09-25  Akim Demaille  <akim@lrde.epita.fr>

	Prepend std:: to istream.

	* parser/bison/Makefile.defs: For Linux.

2006-09-25  Akim Demaille  <akim@lrde.epita.fr>

	VC++ issues"".

	* ucommand.cc: .Formatting changes.
	* parser/bison/Makefile.defs (utoken.cc): Fix lack of std::.

2006-09-25  Akim Demaille  <akim@lrde.epita.fr>

	Fixes and details.

	* ucommand.cc: Indent properly.
	* utypes.h: Comment changes.
	* parser/bison/ugrammar.y (NEW_BIN): New.
	Use it.
	Don't use parens for delete.
	"Delete 0" is valid C++.
	* parser/bison/Makefile.defs: Ship FlexLexer.h.

2006-09-25  Akim Demaille  <akim@lrde.epita.fr>

	Fixes.

	* build-aux/move-if-change: New.
	* Makefile.am: Ship bison++.in.

2006-09-25  Akim Demaille  <akim@lrde.epita.fr>

	Dos2unix.
	* ucommand.cc, utypes.h, uvariablelist.cc, ucallid.cc