@@ -9,12 +9,19 @@ network/OPENR/aiboconnection.h			\
 network/OPENR/aiboconnection.cc
 libkernel_bsdnet_la_LIBADD = libkernel.la
 
+
 OPENR_PREFIX = /usr/local/OPEN_R_SDK
 libkernel_openr_la_CPPFLAGS =			\
 	$(AM_CPPFLAGS)				\
 	-I$(OPENR_PREFIX)/OPEN_R/include/R4000	\
 	-I$(OPENR_PREFIX)/OPEN_R/include/MCOOP	\
 	-I$(OPENR_PREFIX)/OPEN_R/include
+
+
+# Kludge to install userver.h.
+openrdir = $(includedir)/network/OPENR
+openr_HEADERS = network/OPENR/aiboconnection.h
+
 
 ## Local Variables:
 ## mode: Makefile
