@@ -11,6 +11,12 @@ network/bsdnet/network.h			\
 network/bsdnet/network.cc
 libkernel_bsdnet_la_LIBADD = libkernel.la
 
+# Kludge to install userver.h.
+bsdnetdir = $(includedir)/network/bsdnet
+bsdnet_HEADERS = 				\
+network/bsdnet/Connection.h			\
+network/bsdnet/network.h
+
 ## Local Variables:
 ## mode: Makefile
 ## End:
