@@ -22,12 +22,6 @@
 #ifndef USERVER_H_DEFINED
 # define USERVER_H_DEFINED
 
-class UConnection;
-class UGhostConnection;
-class UServer;
-class UValue;
-class UVariable;
-
 # include "utypes.h"
 # include "parser/uparser.h"
 # include "ufunction.h"
@@ -36,9 +30,13 @@ class UVariable;
 
 # define WAITDEBUG {double xw;for (int i=0;i<400000;i++) xw=sin(xw+i);}
 
-class UString;
-class UParser;
+class UConnection;
+class UGhostConnection;
 class UQueue;
+class UServer;
+class UString;
+class UValue;
+class UVariable;
 
 extern  const char* EXTERNAL_MESSAGE_TAG;
 extern  const char* DISPLAY_FORMAT;
